--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@types/react-router-dom": "^5.1.7",
+    "animate.css": "^4.1.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "parcel ./public/index.html",
