--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@reach/router": "^1.3.4",
     "@types/react-router-dom": "^5.1.7",
     "animate.css": "^4.1.1",
+    "dat.gui": "^0.7.7",
+    "p5": "^1.3.1",
+    "rc-progress": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "three": "^0.128.0",
+    "tween": "^0.9.0"
   },
   "scripts": {
     "start": "parcel ./public/index.html",
