--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animate.css": "^4.1.1",
     "dat.gui": "^0.7.7",
     "p5": "^1.3.1",
+    "postprocessing": "^6.21.4",
     "rc-progress": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
