--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@types/fabric": "^4.2.5",
     "@types/react-router-dom": "^5.1.7",
+    "@types/three": "^0.127.1",
     "animate.css": "^4.1.1",
     "dat.gui": "^0.7.7",
+    "fabric": "^4.4.0",
+    "fontfaceobserver": "^2.1.0",
     "p5": "^1.3.1",
     "postprocessing": "^6.21.4",
     "rc-progress": "^3.1.3",
