--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "losstudios.xyz",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.html",
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
