--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@tweenjs/tween.js": "^18.6.4",
     "@types/fabric": "^4.2.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/three": "^0.127.1",
@@ -17,8 +18,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "three": "^0.128.0",
-    "three.interaction": "^0.2.3",
-    "tween": "^0.9.0"
+    "three.interaction": "^0.2.3"
   },
   "scripts": {
     "start": "parcel ./public/index.html",
