--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "dependencies": {
     "@reach/router": "^1.3.4",
     "@tweenjs/tween.js": "^18.6.4",
-    "@types/fabric": "^4.2.5",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/three": "^0.127.1",
-    "@types/tweenjs": "^1.0.3",
     "animate.css": "^4.1.1",
     "dat.gui": "^0.7.7",
     "fontfaceobserver": "^2.1.0",
@@ -16,15 +12,16 @@
     "rc-progress": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "three": "^0.128.0",
-    "three.interaction": "^0.2.3"
+    "three": "^0.128.0"
   },
   "scripts": {
     "start": "parcel ./public/index.html",
     "build": "parcel build ./public/index.html"
   },
   "devDependencies": {
+    "@types/reach__router": "^1.3.8",
+    "@types/three": "^0.129.1",
+    "@types/tweenjs": "^1.0.3",
     "parcel": "^2.0.0-beta.2",
     "typescript": "^4.0.2"
   }
