--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rc-progress": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-slideshow-image": "^3.4.6",
     "three": "^0.128.0"
   },
   "scripts": {
