--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/router": "^1.3.4",
     "@tweenjs/tween.js": "^18.6.4",
+    "@types/dat.gui": "^0.7.6",
     "animate.css": "^4.1.1",
     "dat.gui": "^0.7.7",
     "fontfaceobserver": "^2.1.0",
