--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@reduxjs/toolkit": "^1.6.0",
     "@tweenjs/tween.js": "^18.6.4",
     "@types/dat.gui": "^0.7.6",
     "animate.css": "^4.1.1",
@@ -13,6 +14,7 @@
     "rc-progress": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.4",
     "react-slideshow-image": "^3.4.6",
     "three": "^0.128.0"
   },
