--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.4.0",
     "@reach/router": "^1.3.4",
     "@reduxjs/toolkit": "^1.6.0",
     "@tweenjs/tween.js": "^18.6.4",
@@ -15,6 +14,7 @@
     "rc-progress": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^7.0.1",
     "react-redux": "^7.2.4",
     "react-slideshow-image": "^3.4.6",
     "three": "^0.128.0"
