--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "rc-progress": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-image-lightbox": "^5.1.4",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.4",
     "react-slideshow-image": "^3.4.6",
